cabal-version:      2.4
name:               snake-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Thiago Paiva
maintainer:         thiagohdaqw@gmail.com

executable snake-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        World, Coin, Snake, Menu

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ==4.*, gloss
    hs-source-dirs:   app
    default-language: Haskell2010
